--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-.venv/
+# Python cache
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+
+# Virtual env
+.venv/
+
+# Logs e temporários
+*.log
+*.tmp
+
+# OS / IDE
+.DS_Store
+Thumbs.db
+.vscode/
